fixed gap between dirction-column-1

--- a/css/main.css
+++ b/css/main.css
@@ -1070,7 +1070,7 @@ hr {
         display: flex;
         flex-direction: row;
         padding: 0;
-        gap: 19px;
+        gap: 49px;
         height: 40px;
         margin-bottom: 15px;
     }
